<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GeekMessenger</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_group">Создать группу</string>
    <string name="user_group"> Введите имя группы</string>
    <string name="menu_calls">Звонки</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_profile">Профиль</string>
    <string name="back_russian">Назад</string>
    <string name="mute_russian">Выключить звук</string>
    <string name="clear_chat_russian">Очистить чат</string>
    <string name="video_call_russian">Видеозвонок</string>
    <string name="make_call">Make call</string>
    <string name="last_seen_recently_russian">был(а) недавно</string>
    <string name="image_for_user_s_profile_image">image for user\'s profile image</string>
    <string name="amir_ex_loved_one">Saida</string>
    <string name="there_is_nothing_yet_russian">Здесь пока ничего нет...</string>
    <string name="send_message_or_record_voice_message_russian">Отправьте сообщение или \n запишите голосовое \n сообщение.</string>
    <string name="message_russian">Сообщение</string>
    <string name="button_for_emoji">button for emoji</string>
    <string name="image_view_to_launch_camera">image view to launch camera</string>
    <string name="image_view_for_recording_voice_messages">image view for recording voice messages</string>
    <string name="typing">печатает...</string>
    <string name="Gallery">Галерея</string>
    <string name="account">Аккаунт</string>
    <string name="number">0702345805</string>
    <string name="chance_number">Нажмите чтобы изменить номер телефона</string>
    <string name="settings">Настройки</string>
    <string name="tv_notifications">Уведомление и звуки</string>
    <string name="tv_crossed">Скрыть номер телефона</string>
    <string name="tv_language">Язык</string>
    <string name="gallery">Галерея</string>
    <string name="button_to_send_message">button to send message</string>
    <string name="speaker">Динамик</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="groups">Группы</string>
    <string name="notifications_and_sound">Уведомления и звуки</string>
    <string name="chat_notifications">Уведомления из чатов</string>
    <string name="private_chats">Личные чаты</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="hyphensIfPhoneNumberIsHidden" translatable="false">--- --- --- ---</string>
    <string name="user_list">Список пользователей</string>
    <string name="group_list">Список грумм</string>
    <string name="group_user_list" translatable="false">Кого бы Вы хотели пригласить ?</string>
    <string name="search">Поиск...</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="todoo" translatable="false">TODO</string>
    <string name="todooo" translatable="false">TODO</string>
    <string name="language" translatable="false">Язык</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="kyrgyz" translatable="false">Кыргызский</string>
    <string name="toolbar" translatable="false">TODO</string>
    <string name="search_icon" translatable="false">TODO</string>
    <string name="clear" translatable="false">TODO</string>
    <string name="im_user" translatable="false">TODO</string>
    <string name="plus" translatable="false">+%1$s</string>
    <string name="media_count" translatable="false">1 из %1$s</string>
    <string name="time_photo" translatable="false">%1$s в %2$s</string>
    <string name="firstAndLastName" translatable="false" tools:ignore="DuplicateDefinition">%1$s %2$s</string>
    <string name="save" translatable="false">Cохранить</string>
    <string name="change_your_profile_photo" translatable="false">Изменить фото профиля</string>
    <string name="username" translatable="false">Имя пользователя</string>
    <!--    <string name="todo" translatable="false" tools:ignore="DuplicateDefinition">TODO</string>-->
    <string name="ToCreateGroup" translatable="false">Создать Группу</string>
    <string name="start_voice_message_time" translatable="false">0:00 / %1$s</string>
    <string name="current_seconds_if_less_than_ten_plus_total_duration" translatable="false">0:0%1$s / %2$s</string>
    <string name="current_seconds_if_more_than_ten_plus_total_duration" translatable="false">0:%1$s / %2$s</string>
    <string name="select_a_photo">Выбрать фото</string>
    <string name="delete">Удалить</string>
    <string name="select_photo_or_video">Выберите фотографию или видео</string>
</resources>