<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:enabled="true"
        android:icon="@drawable/ic_back"
        android:title="@string/back_russian"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:enabled="true"
        android:icon="@drawable/ic_video_call"
        android:title="@string/video_call_russian"
        app:showAsAction="collapseActionView"
        android:visible="true"

        />
    <item
        android:enabled="true"
        android:icon="@drawable/ic_clear_chat"
        android:title="@string/clear_chat_russian"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:enabled="true"
        android:icon="@drawable/ic_mute"
        android:title="@string/mute_russian"
        android:visible="true"
        app:showAsAction="never" />

</menu>