<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.profil.language.LanguagesFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:background="@color/blue"
            android:contentDescription="@string/button_to_get_back_to_edit_phone_number_fragment"
            android:src="@drawable/arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:text="@string/tv_language"
            android:textColor="#FFFDFD"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/ib_back"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/language"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radio_button_russian"
        style="@style/LanguagesMaterialRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/russian"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_languages" />


    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radio_button_kyrgyz"
        style="@style/LanguagesMaterialRadioButton"
        android:layout_marginTop="6dp"
        android:text="@string/kyrgyz"
        android:textColor="@color/black"
        app:buttonTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_button_russian" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="62dp"
        android:background="#D4D4D4"
        app:layout_constraintStart_toStartOf="@id/radio_button_russian"
        app:layout_constraintTop_toBottomOf="@id/radio_button_russian" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="62dp"
        android:background="#D4D4D4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_button_kyrgyz" />
</androidx.constraintlayout.widget.ConstraintLayout>