<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.profil.profile.ProfileFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/g_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="menu_toolbar,openBottomSheet,tv_name,tv_last_seen" />


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpi_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:indicatorColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/gl_image_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="10dp"
        android:elevation="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/toolbar_menu"
        app:navigationIcon="@drawable/ic_arrow" />

    <io.getstream.avatarview.AvatarView
        android:id="@+id/av_profile_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:avatarViewBorderRadius="0dp"
        app:avatarViewBorderWidth="0dp"
        app:avatarViewShape="rounded_rect"
        app:layout_constraintBottom_toBottomOf="@id/gl_image_profile"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/gojo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_image_profile"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_tv_start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_tv_which_user"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="#FFFDFD"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/gl_tv_which_user"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Lox" />

    <TextView
        android:id="@+id/tv_last_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="22dp"
        android:textColor="#D4D4D4"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/gl_image_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="Lox" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/openBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/todo"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:layout_constraintBottom_toTopOf="@id/gl_image_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/av_profile_image"
        app:srcCompat="@drawable/ic_camera"
        app:tint="@null" />


    <View
        android:id="@+id/view"
        android:layout_width="1999dp"
        android:layout_height="89dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toTopOf="@id/view_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/av_profile_image" />

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/account"
        android:textAppearance="@style/text_account"
        android:textColor="#5393D0"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/gl_tv_start"
        app:layout_constraintTop_toBottomOf="@id/av_profile_image" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/gl_tv_start"
        app:layout_constraintTop_toBottomOf="@id/tv_account"
        tools:text="+996 704190504" />


    <View
        android:id="@+id/v_settings"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="11dp"
        android:background="#9F9F9F"
        app:layout_constraintTop_toBottomOf="@id/tv_number" />


    <View
        android:id="@+id/view_one"
        android:layout_width="match_parent"
        android:layout_height="258dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textAppearance="@style/text_account"
        android:textColor="#5393D0"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/gl_tv_start"
        app:layout_constraintTop_toBottomOf="@id/v_settings" />

    <View
        android:id="@+id/v_notifications"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="6dp"
        android:background="#66D9D9D9"
        app:layout_constraintTop_toBottomOf="@id/tv_settings" />

    <ImageView
        android:id="@+id/im_notifications_and_sounds"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todooo"
        android:src="@drawable/ic_bell"
        app:layout_constraintStart_toStartOf="@id/gl_tv_start"
        app:layout_constraintTop_toBottomOf="@id/tv_settings" />

    <TextView
        android:id="@+id/tv_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:text="@string/tv_notifications"
        android:textAppearance="@style/tv_settings"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/im_notifications_and_sounds"
        app:layout_constraintTop_toBottomOf="@id/tv_settings" />


    <View
        android:id="@+id/v_hide_phone_number"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:background="#66D9D9D9"
        app:layout_constraintTop_toBottomOf="@id/v_notifications" />

    <ImageView
        android:id="@+id/im_hide_phone_number"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_crossed_eye"
        app:layout_constraintStart_toStartOf="@id/gl_tv_start"
        app:layout_constraintTop_toBottomOf="@id/v_notifications" />

    <TextView
        android:id="@+id/tv_crossed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:text="@string/tv_crossed"
        android:textAppearance="@style/tv_settings"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/im_hide_phone_number"
        app:layout_constraintTop_toBottomOf="@id/v_notifications" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_hide_phone_number"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:thumb="@drawable/hide_phone_number_switch_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_notifications"
        app:track="@drawable/ic_switch_track_unchecked" />


    <View
        android:id="@+id/v_language"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:background="#66D9D9D9"
        app:layout_constraintTop_toBottomOf="@id/v_hide_phone_number" />


    <ImageView
        android:id="@+id/im_language"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_language"
        app:layout_constraintStart_toStartOf="@id/gl_tv_start"
        app:layout_constraintTop_toTopOf="@id/v_language" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:text="@string/tv_language"
        android:textAppearance="@style/tv_settings"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/im_language"
        app:layout_constraintTop_toBottomOf="@id/v_hide_phone_number" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_gallery"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:visibility="gone">

        <include
            android:id="@+id/gallery_bottom_sheet"
            layout="@layout/fragment_gallery_bottom_sheet" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>